istio/multiprimary/configs-k8s/fortio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-deployment
spec:
  selector:
    matchLabels:
      app: fortio
  replicas: 1
  template:
    metadata:
      annotations:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:1.40.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
