istio/multiprimary/configs-k8s/fortio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-service
  labels:
    app: fortio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fortio
